syntax="proto3";

package order;

option go_package = "./orders/pb";
import "google/protobuf/timestamp.proto";

message CreateOrderRequest {
    int64 userId = 1;
    int64 quantity = 2;
    int64 productId = 3;
}

message CreateOrderResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse){}
}