syntax="proto3";

package product;
option go_package = "./pb";
import "google/protobuf/timestamp.proto";

// create product 
message CreateProductRequest {
    string name = 1;
    int64 stock = 2;
    int64 price = 3;
}

message CreateProductResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
    CreateProductRequest data = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    google.protobuf.Timestamp deleted_at = 7;
}

// Find One 
message FindOneData {
    int64 id = 1;
    CreateProductRequest data = 2;
}

message FindOneDataRequest {
    int64 id = 1;
}

message FindOneDataResponse {
    int64 status = 1;
    string error = 2;
    FindOneData data = 3;
}

// Decrease Stock 
message DecreaseStockRequest {
    int64 id = 1;
    int64 orderId = 2;
}

message DecreaseStockResponse {
    int64 status = 1;
    string error = 2;
}

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc FindOne (FindOneDataRequest) returns (FindOneDataResponse);
    rpc DecreaseStock (DecreaseStockRequest) returns (DecreaseStockResponse);
}